fix breadcrumbs spacing

--- a/src/scss/partials/_block.scss
+++ b/src/scss/partials/_block.scss
@@ -87,8 +87,13 @@
 
   // Variants
   &--breadcrumbs {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 0;
+
+    @include mq($from: m) {
+      padding-top: 40px;
+      padding-bottom: 0px;
+    }
   }
 
   &--header {
